# soapero

./: .gitignore  CMakeLists.txt  COPYING.in  README.md  build.sh  config.h.in  ts.qrc.in  version.h.in
CMakeModules/: IncludeLibraries.cmake  ProjectIncludeLibraries.cmake
examples/CalculatorService/: CMakeLists.txt  build.sh  main.cpp  test.sh
resources/Base/: XSAnySimpleType.h  XSAnyType.h  XSBase64Binary.cpp  XSBase64Binary.h  XSDuration.h  XSInteger.h  XSNCName.cpp  XSNCName.h  XSNonNegativeInteger.cpp  XSQName.cpp  XSQName.h
resources/Base/xs/types/: AnySimpleType.cpp  AnySimpleType.h  AnyType.cpp  AnyType.h  AnyURI.cpp  AnyURI.h  Base64Binary.cpp  Base64Binary.h  Boolean.cpp  Boolean.h  DateTime.cpp  DateTime.h  Double.cpp  Double.h  Duration.cpp  Duration.h  Float.cpp  Float.h  HexBinary.cpp  HexBinary.h  Integer.cpp  Integer.h  NCName.cpp  NCName.h  NonNegativeInteger.cpp  NonNegativeInteger.h  QName.cpp  QName.h  String.cpp  String.h  Token.cpp  Token.h  UnsignedInteger.cpp  UnsignedInteger.h  UnsignedLong.cpp  UnsignedLong.h
resources/Service/: Service.cpp  Service.h
src/: common.h  main.cpp
src/Base/: XSAnySimpleType.cpp  XSAnyType.cpp  XSAnyURI.cpp  XSAnyURI.h  XSBoolean.cpp  XSBoolean.h  XSDateTime.cpp  XSDouble.cpp  XSDouble.h  XSDuration.cpp  XSDuration.h  XSFloat.cpp  XSFloat.h  XSHexBinary.cpp  XSHexBinary.h  XSInteger.cpp  XSInteger.h  XSNonNegativeInteger.h  XSString.cpp  XSString.h  XSToken.cpp  XSToken.h  XSUnsignedInteger.cpp  XSUnsignedInteger.h  XSUnsignedLong.cpp
src/Builder/: FileBuilder.cpp  FileBuilder.h  FileHelper.cpp  FileHelper.h  TypeListBuilder.cpp  TypeListBuilder.h
src/LanguageWriter/: CppWriter.cpp  CppWriter.h  QtCppWriter.cpp  QtCppWriter.h
src/Loader/: QServicesLoader.cpp  QServicesLoader.h  QWSDLLoader.cpp  QWSDLLoader.h
src/Model/: Attribute.cpp  Attribute.h  Classname.cpp  Classname.h  ComplexType.cpp  ComplexType.h  Element.cpp  Element.h  Message.cpp  Message.h  Operation.cpp  Operation.h  RequestResponseElement.cpp  RequestResponseElement.h  Service.cpp  Service.h  ServiceDescriptor.cpp  ServiceDescriptor.h  SimpleType.cpp  SimpleType.h  Type.cpp  Type.h  TypeRef.cpp  TypeRef.h
src/Parser/: QWSDLData.cpp  QWSDLData.h  QWSDLParser.cpp  QWSDLParser.h  QWSDLParserHandler.cpp  QWSDLParserHandler.h  WSDLAttributes.h  WSDLSections.h
src/Service/: Service.cpp  Service.h
src/TargetEngine/: CppTargetEngine.cpp  CppTargetEngine.h  QtCppTargetEngine.cpp  QtCppTargetEngine.h  TargetEngine.cpp  TargetEngine.h
src/Utils/: FileDownloader.cpp  FileDownloader.h  ModelUtils.cpp  ModelUtils.h  StringUtils.h  UniqueStringList.cpp  UniqueStringList.h
